[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/thin_pixelated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/curry/curry.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/icons/beef.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/chicken.png" type="Texture" id=5]
[ext_resource path="res://scripts/guis/price_management.gd" type="Script" id=6]
[ext_resource path="res://assets/images/icons/pork.png" type="Texture" id=7]
[ext_resource path="res://themes/curry/pixelated.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 33
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 26
font_data = ExtResource( 1 )

[node name="PriceManagement" type="Control"]
margin_right = 724.0
margin_bottom = 424.0
theme = ExtResource( 3 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5

[node name="MgmtStrat" type="Label" parent="VBoxContainer"]
margin_right = 724.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Price Management"
align = 1
valign = 1
autowrap = true

[node name="Stock" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 724.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_constants/separation = 20

[node name="Chicken" type="VBoxContainer" parent="VBoxContainer/Stock"]
margin_right = 228.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Meal" type="ColorRect" parent="VBoxContainer/Stock/Chicken"]
margin_right = 228.0
margin_bottom = 47.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="VBoxContainer/Stock/Chicken/Meal"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "ChickenÂ Curry"
align = 1
valign = 1
autowrap = true

[node name="Price" type="ColorRect" parent="VBoxContainer/Stock/Chicken"]
margin_top = 57.0
margin_right = 228.0
margin_bottom = 96.0
size_flags_vertical = 3

[node name="Amount" type="Label" parent="VBoxContainer/Stock/Chicken/Price"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Current Price"
align = 1
valign = 1

[node name="Beef" type="VBoxContainer" parent="VBoxContainer/Stock"]
margin_left = 248.0
margin_right = 476.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Meal" type="ColorRect" parent="VBoxContainer/Stock/Beef"]
margin_right = 228.0
margin_bottom = 47.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="VBoxContainer/Stock/Beef/Meal"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Beef Curry"
align = 1
valign = 1
autowrap = true

[node name="Price" type="ColorRect" parent="VBoxContainer/Stock/Beef"]
margin_top = 57.0
margin_right = 228.0
margin_bottom = 96.0
size_flags_vertical = 3

[node name="Amount" type="Label" parent="VBoxContainer/Stock/Beef/Price"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Current Price"
align = 1
valign = 1

[node name="Pork" type="VBoxContainer" parent="VBoxContainer/Stock"]
margin_left = 496.0
margin_right = 724.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Meal" type="ColorRect" parent="VBoxContainer/Stock/Pork"]
margin_right = 228.0
margin_bottom = 47.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="MealLabel" type="Label" parent="VBoxContainer/Stock/Pork/Meal"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pork Curry"
align = 1
valign = 1
autowrap = true

[node name="Price" type="ColorRect" parent="VBoxContainer/Stock/Pork"]
margin_top = 57.0
margin_right = 228.0
margin_bottom = 96.0
size_flags_vertical = 3

[node name="Amount" type="Label" parent="VBoxContainer/Stock/Pork/Price"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Current Price"
align = 1
valign = 1

[node name="UpdateLabel" type="Label" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 724.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Update Meal Prices"
align = 1
valign = 1
autowrap = true

[node name="Meal" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 724.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.7
custom_constants/separation = 20

[node name="Chicken" type="VBoxContainer" parent="VBoxContainer/Meal"]
margin_right = 228.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Meal/Chicken"]
margin_right = 228.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="Chicken" type="ColorRect" parent="VBoxContainer/Meal/Chicken/HBoxContainer2"]
margin_right = 158.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="VBoxContainer/Meal/Chicken/HBoxContainer2/Chicken"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Chicken
Curry"
align = 1
valign = 1
autowrap = true

[node name="Icon" type="ColorRect" parent="VBoxContainer/Meal/Chicken/HBoxContainer2"]
margin_left = 162.0
margin_right = 228.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Icon" type="TextureRect" parent="VBoxContainer/Meal/Chicken/HBoxContainer2/Icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -46.5
margin_right = 29.5
margin_bottom = 47.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Meal/Chicken"]
margin_top = 112.0
margin_right = 228.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( -74, 24 )
alignment = 1

[node name="minus" type="Button" parent="VBoxContainer/Meal/Chicken/HBoxContainer"]
margin_right = 44.0
margin_bottom = 52.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Meal/Chicken/HBoxContainer"]
margin_left = 48.0
margin_right = 180.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 10 )
align = 1
placeholder_text = "New Price"

[node name="plus" type="Button" parent="VBoxContainer/Meal/Chicken/HBoxContainer"]
margin_left = 184.0
margin_right = 228.0
margin_bottom = 52.251
rect_pivot_offset = Vector2( -71, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="ChickenUpdate" type="Button" parent="VBoxContainer/Meal/Chicken"]
margin_top = 174.0
margin_right = 228.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 8 )
text = "Update"

[node name="BeefBlock" type="TextureRect" parent="VBoxContainer/Meal"]
margin_left = 248.0
margin_right = 476.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Meal/BeefBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Unlocks on 
Day 4"
align = 1
valign = 1
autowrap = true

[node name="Beef" type="VBoxContainer" parent="VBoxContainer/Meal"]
visible = false
margin_left = 372.0
margin_right = 538.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Meal/Beef"]
margin_right = 166.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="Beef" type="ColorRect" parent="VBoxContainer/Meal/Beef/HBoxContainer2"]
margin_right = 114.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="VBoxContainer/Meal/Beef/HBoxContainer2/Beef"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Beef 
Curry"
align = 1
valign = 1
autowrap = true

[node name="Icon" type="ColorRect" parent="VBoxContainer/Meal/Beef/HBoxContainer2"]
margin_left = 118.0
margin_right = 166.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Icon" type="TextureRect" parent="VBoxContainer/Meal/Beef/HBoxContainer2/Icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -46.5
margin_right = 28.5
margin_bottom = 46.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Meal/Beef"]
margin_top = 112.0
margin_right = 166.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( -74, 24 )
alignment = 1

[node name="Minus" type="Button" parent="VBoxContainer/Meal/Beef/HBoxContainer"]
margin_right = 39.3241
margin_bottom = 52.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Meal/Beef/HBoxContainer"]
margin_left = 43.0
margin_right = 123.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 10 )
align = 1
placeholder_text = "New Price"

[node name="Plus" type="Button" parent="VBoxContainer/Meal/Beef/HBoxContainer"]
margin_left = 127.0
margin_right = 166.324
margin_bottom = 52.251
rect_pivot_offset = Vector2( -71, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="BeefUpdate" type="Button" parent="VBoxContainer/Meal/Beef"]
margin_top = 174.0
margin_right = 166.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 8 )
text = "Update"

[node name="PorkBlock" type="TextureRect" parent="VBoxContainer/Meal"]
margin_left = 496.0
margin_right = 724.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true

[node name="Label2" type="Label" parent="VBoxContainer/Meal/PorkBlock"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Unlocks on 
Day 10"
align = 1
valign = 1
autowrap = true

[node name="Pork" type="VBoxContainer" parent="VBoxContainer/Meal"]
visible = false
margin_left = 558.0
margin_right = 724.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Meal/Pork"]
margin_right = 166.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="Pork" type="ColorRect" parent="VBoxContainer/Meal/Pork/HBoxContainer2"]
margin_right = 114.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Label" type="Label" parent="VBoxContainer/Meal/Pork/HBoxContainer2/Pork"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pork 
Curry"
align = 1
valign = 1
autowrap = true

[node name="Icon" type="ColorRect" parent="VBoxContainer/Meal/Pork/HBoxContainer2"]
margin_left = 118.0
margin_right = 166.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.917647, 0.717647, 0.25098, 1 )

[node name="Icon" type="TextureRect" parent="VBoxContainer/Meal/Pork/HBoxContainer2/Icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -46.5
margin_right = 27.5
margin_bottom = 45.5
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Meal/Pork"]
margin_top = 112.0
margin_right = 166.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( -74, 24 )
alignment = 1

[node name="Minus" type="Button" parent="VBoxContainer/Meal/Pork/HBoxContainer"]
margin_right = 39.3241
margin_bottom = 52.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "-"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Meal/Pork/HBoxContainer"]
margin_left = 43.0
margin_right = 123.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 10 )
align = 1
placeholder_text = "New Price"

[node name="Plus" type="Button" parent="VBoxContainer/Meal/Pork/HBoxContainer"]
margin_left = 127.0
margin_right = 166.324
margin_bottom = 52.251
rect_pivot_offset = Vector2( -71, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="PorkUpdate" type="Button" parent="VBoxContainer/Meal/Pork"]
margin_top = 174.0
margin_right = 166.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 8 )
text = "Update"

[connection signal="pressed" from="VBoxContainer/Meal/Chicken/HBoxContainer/minus" to="." method="_on_Chicken_minus_pressed"]
[connection signal="text_changed" from="VBoxContainer/Meal/Chicken/HBoxContainer/LineEdit" to="." method="_on_ChickenLine_text_changed"]
[connection signal="pressed" from="VBoxContainer/Meal/Chicken/HBoxContainer/plus" to="." method="_on_Chicken_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/Meal/Chicken/ChickenUpdate" to="." method="_on_ChickenUpdate_pressed"]
[connection signal="pressed" from="VBoxContainer/Meal/Beef/HBoxContainer/Minus" to="." method="_on_Beef_minus_pressed"]
[connection signal="text_changed" from="VBoxContainer/Meal/Beef/HBoxContainer/LineEdit" to="." method="_on_BeefLine_text_changed"]
[connection signal="pressed" from="VBoxContainer/Meal/Beef/HBoxContainer/Plus" to="." method="_on_Beef_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/Meal/Beef/BeefUpdate" to="." method="_on_BeefUpdate_pressed"]
[connection signal="pressed" from="VBoxContainer/Meal/Pork/HBoxContainer/Minus" to="." method="_on_Pork_minus_pressed"]
[connection signal="text_changed" from="VBoxContainer/Meal/Pork/HBoxContainer/LineEdit" to="." method="_on_PorkLine_text_changed"]
[connection signal="pressed" from="VBoxContainer/Meal/Pork/HBoxContainer/Plus" to="." method="_on_Pork_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/Meal/Pork/PorkUpdate" to="." method="_on_PorkUpdate_pressed"]
